--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
     <main>
         <img src="src/Harry Potter logo.png" width="600px" class="img-logo">
         <h1>Quizz</h1>
+
+        <div class="conjunto-niveis">
+            <div class="nivel">
+                <div class="nivel-div">
+                    <img src="src/pngwing.com (2).png" width="100%" class="background-nivel">
+                    <img src="src/varinha.png" width="100%" class="varinha">
+                    
+                </div>
+                <h2 class="easy">EASY</h2>
+            </div>
+            <div class="nivel">
+                <div class="nivel-div">
+                    <img src="src/pngwing.com (2).png" width="100%" class="background-nivel">
+                    <img src="src/varinha.png" width="100%" class="varinha">
+                </div>
+                <h2 class="medium">MEDIUM</h2>
+            </div>
+            <div class="nivel">
+                <div class="nivel-div">
+                    <img src="src/pngwing.com (2).png" width="100%" class="background-nivel">
+                    <img src="src/varinha.png" width="100%" class="varinha">
+                </div>
+                <h2 class="hard">HARD</h2>
+            </div>
+        </div>
     </main>
+
+    <footer id="footer">
+        <p>Desenvolvido por <span>Houston Braga</span>.</p>
+    </footer>
 
 
 
